Correct social media sharing links

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
 
-    <meta property="og:url" content="https://life-calculator.now.sh/" />
+    <meta property="og:url" content="https://moneysmarts.app" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Money Smarts" />
     <meta
@@ -44,6 +44,13 @@
     <title>Money Smarts</title>
   </head>
   <body>
+    <div id="fb-root"></div>
+    <script
+      async
+      defer
+      crossorigin="anonymous"
+      src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v6.0"
+    ></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
